--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,9 +18,10 @@ jobs:
         - name: Install dependencies
           run: |
             python -m pip install --upgrade pip
-            pip install -r requirements.txt
+            pip install -r slm_project/requirements.txt
             pip install pytest
 
         - name: Run tests
           run: |
-            pytest tests/
+            
+            pytest slm_project/tests/
