[M] ".github/workflows/test.yml" : Fixing dir for tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,4 @@ jobs:
         - name: Run tests
           run: |
             
-            pytest slm_project/tests/
+            pytest slm_project/test/
